fix scss alignment

--- a/src/scss/components/_steps.scss
+++ b/src/scss/components/_steps.scss
@@ -404,15 +404,16 @@ $steps-mobile-max-width: $tablet !default;
                     }
                 }
             }
-            &:not(.has-label-right):not(.has-label-left) {.step-items {
-                .step-item {
-                    .step-link {
-                        > .step-details {
-                            background-color: $steps-details-background-color;
+            &:not(.has-label-right):not(.has-label-left) {
+                .step-items {
+                    .step-item {
+                        .step-link {
+                            > .step-details {
+                                background-color: $steps-details-background-color;
+                            }
                         }
                     }
                 }
-            }
             }
         }
 
